--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 
 <body>
-  <script src="matter.js" type="text/javascript"></script>
-  <script src="matter-attractors.js" type="text/javascript"></script>
+  <script src="src/matter.js" type="text/javascript"></script>
+  <script src="src/matter-attractors.js" type="text/javascript"></script>
   <script src="solar.js" type="text/javascript"></script>
   <script src="rocket.js" type="text/javascript"></script>
   <script src="views.js" type="text/javascript"></script>
