--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
   <script src="solar.js" type="text/javascript"></script>
   <script src="rocket.js" type="text/javascript"></script>
   <script src="views.js" type="text/javascript"></script>
+
+  <script src="scheduler.js" type="text/javascript"></script>
   <script src="gravity.js" type="text/javascript"></script>
 </body>
 </html>
