Moved js files into js dir

--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 </head>
 
 <body>
-  <script src="src/matter.js" type="text/javascript"></script>
-  <script src="src/matter-attractors.js" type="text/javascript"></script>
-  <script src="solar.js" type="text/javascript"></script>
-  <script src="rocket.js" type="text/javascript"></script>
-  <script src="views.js" type="text/javascript"></script>
+  <script src="dependencies/js/matter.js" type="text/javascript"></script>
+  <script src="dependencies/js/matter-attractors.js" type="text/javascript"></script>
+  <script src="js/solar.js" type="text/javascript"></script>
+  <script src="js/rocket.js" type="text/javascript"></script>
+  <script src="js/views.js" type="text/javascript"></script>
 
-  <script src="scheduler.js" type="text/javascript"></script>
-  <script src="gravity.js" type="text/javascript"></script>
+  <script src="js/scheduler.js" type="text/javascript"></script>
+  <script src="js/gravity.js" type="text/javascript"></script>
 </body>
 </html>
